--- a/UNNAMED-App/app.json
+++ b/UNNAMED-App/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "UNNAMED-App",
-    "slug": "UNNAMED-App",
+    "name": "ILA_0120_Frey",
+    "slug": "ILA_0120_Frey",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
